fix left and right space on mobile

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -30,8 +30,7 @@ body{
 // 
 
 .bloc{  
-  padding-top: $spacer-y * 3;
-  padding-bottom: $spacer-y * 3;
+  padding: ($spacer-y * 3) ($spacer-x * .5);
 
   @include media-breakpoint-up(lg){
     padding-top: $spacer-y * 6;
@@ -89,7 +88,7 @@ body{
     text-align: center;
     overflow-x: auto;
     overflow: hidden;
-    transition: 0.5s;
+    transition: 0.3s;
     display: flex;
     flex-direction: column;
     align-items: center;
